ros2_ws/log/build_2025-03-19_14-46-29/lane_angle/stderr.log
  File "/home/crofi/ros2_ws/install/lane_angle/lib/python3.10/site-packages/lane_angle/lane_angle.py", line 61
    elif deviation == 0.5
                         ^
SyntaxError: expected ':'

